font atlas working

--- a/data/imgui.ini
+++ b/data/imgui.ini
@@ -1,10 +1,30 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=76,347
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=-247,56
-Size=727,464
+Pos=23,114
+Size=727,349
+Collapsed=1
+
+[Window][Font Atlas]
+Pos=574,366
+Size=192,623
+Collapsed=0
+
+[Window][Test Atlas]
+Pos=23,85
+Size=1226,677
+Collapsed=1
+
+[Window][Smile 1]
+Pos=669,61
+Size=528,581
+Collapsed=1
+
+[Window][Smile 2]
+Pos=668,41
+Size=528,581
 Collapsed=1
 
