project onto plane

--- a/data/imgui.ini
+++ b/data/imgui.ini
@@ -28,3 +28,13 @@ Pos=668,41
 Size=528,581
 Collapsed=1
 
+[Window][Camera front]
+Pos=60,60
+Size=174,79
+Collapsed=0
+
+[Window][Camera front cross world-up]
+Pos=37,190
+Size=237,89
+Collapsed=0
+
