fixed attach camera. started scene file format

--- a/data/imgui.ini
+++ b/data/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=606,131
-Size=495,458
+Pos=1133,169
+Size=530,486
 Collapsed=0
 
 [Window][Font Atlas]
@@ -29,12 +29,27 @@ Size=528,581
 Collapsed=1
 
 [Window][Camera front]
-Pos=194,495
+Pos=71,461
 Size=174,79
 Collapsed=0
 
 [Window][Camera front cross world-up]
 Pos=78,209
 Size=239,217
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=755,454
+Size=409,172
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Dear ImGui Stack Tool]
+Pos=431,132
+Size=427,319
 Collapsed=0
 
